* transcode.c (econv_opts): set :undef => :replace when   :replace is given and :invalid is not given. [ruby-dev:40554]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26823 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar  5 19:36:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* transcode.c (econv_opts): set :undef => :replace when
+	  :replace is given and :invalid is not given. [ruby-dev:40554]
+
 Fri Mar  5 17:51:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (pipe_open): suppressed a warning.
