* io.c (rb_io_s_write, rb_io_s_binwrite): delete File#write and   #binwrite.  It may take a long time to make them stable, so 1.9.2   should not include them.  We need refactoring to implement them   again.
* test/ruby/test_io.rb: delete tests for them.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26827 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Mar  6 13:45:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* io.c (rb_io_s_write, rb_io_s_binwrite): delete File#write and
+	  #binwrite.  It may take a long time to make them stable, so 1.9.2
+	  should not include them.  We need refactoring to implement them
+	  again.
+
+	* test/ruby/test_io.rb: delete tests for them.
+
 Sat Mar  6 10:03:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* io.c (rb_io_s_binwrite): use mode "r+b" instead of "ab" to handle
