* pack.c: fix the prototype of rb_big2ulong_pack.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26828 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar  6 22:07:09 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c: fix the prototype of rb_big2ulong_pack.
+
 Sat Mar  6 13:45:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* io.c (rb_io_s_write, rb_io_s_binwrite): delete File#write and
