describe new optional arugment for Pathname#realpath and Pathname#realdirpath.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26843 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -254,6 +254,10 @@ with all sufficient information, see the ChangeLog file.
     * Pathname#realdirpath
     * Pathname#each_child
 
+  * extended methods:
+    * Pathname#realpath and Pathname#realdirpath takes optional basedir
+      argument.
+
 * Readline
   * new methods:
     * Readline.set_screen_size
