--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar  7 23:14:22 2010  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (rb_big_pack): use DIGSPERLONG and BITSPERDIG.
+	  (rb_big_unpack): use DIGSPERLONG.
+
 Sun Mar  7 19:21:10 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* io.c: Fix documentation for each/each_line/lines, bytes/each_byte,
