--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Mar  7 02:27:03 2010  Alexander Zavorine  <alexandre.zavorine@nokia.com>
+
+	* dln.c [DLN_NEEDS_ALT_SEPARATOR] (translit_separator): small typo fixed.
+	* symbian/setup (*.pkg): Shared library installation path fixed to match changes in version.c.
+	* symbian/setup (ruby.mmp): SOURCE dln_find.c added.
+
 Sun Mar  7 23:14:22 2010  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (rb_big_pack): use DIGSPERLONG and BITSPERDIG.
