* re.c (rb_reg_to_s): remove unused variable.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26854 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar  9 14:55:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* re.c (rb_reg_to_s): remove unused variable.
+
 Tue Mar  9 12:17:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* tool/transcode-tblgen.rb (StrSet#parse, ActionMap#generate_node):
