--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 01:04:48 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* iseq.c (rb_iseq_clone): sets local_iseq and klass properly.
+
 Wed Mar 10 21:25:41 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* enum.c (min_ii, max_ii, minmax_ii): remove wrong optimization that
