* win32/win32.c (signbit): allow x64.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26869 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 01:33:30 2010  wanabe  <s.wanabe@gmail.com>
+
+	* win32/win32.c (signbit): allow x64.
+
 Thu Mar 11 01:04:48 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* iseq.c (rb_iseq_clone): sets local_iseq and klass properly.
