--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 11:16:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in: check if target_archs has changed.
+
 Thu Mar 11 01:33:30 2010  wanabe  <s.wanabe@gmail.com>
 
 	* win32/win32.c (signbit): allow x64.
