* missing/signbit.c: added.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26871 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 12:14:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* missing/signbit.c: added.
+
 Thu Mar 11 11:16:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: check if target_archs has changed.
