* transcode.c (str_transcode0): confirm the code range.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26872 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 17:31:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* transcode.c (str_transcode0): confirm the code range.
+
 Thu Mar 11 12:14:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* missing/signbit.c: added.
