--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 22:35:27 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (time_round): new method Time#round.  [ruby-dev:40595]
+
 Thu Mar 11 17:31:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* transcode.c (str_transcode0): confirm the code range.
