describe Time#round.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26876 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -108,6 +108,7 @@ with all sufficient information, see the ChangeLog file.
 
     * new method:
       * Time#to_r
+      * Time#round
 
     * incompatible changes:
       * The year argument of Time.{utc,gm,local,mktime} is now interpreted as
