--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 12 06:37:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* sample/timeout.rb: split from lib/timeout.rb.
+
 Thu Mar 11 22:35:27 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (time_round): new method Time#round.  [ruby-dev:40595]
