--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 07:09:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (config.status): setup MINIRUBY environment for
+	  cross-compiling.
+
 Fri Mar 12 06:48:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/tk/extconf.rb: log() is built-in in some compilers and needs
