* ext/racc/cparse/cparse.c: suppressed warnings for shortening on   platforms where pointer is bigger than int.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26882 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 07:17:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/racc/cparse/cparse.c: suppressed warnings for shortening on
+	  platforms where pointer is bigger than int.
+
 Fri Mar 12 07:15:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.c (ruby_init_loadpath_safe, ruby_init_gems): set and remove
