* win32/win32.c (init_env): get rid of alloca() for outer string.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26883 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 12 07:25:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (init_env): get rid of alloca() for outer string.
+
 Fri Mar 12 07:17:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/racc/cparse/cparse.c: suppressed warnings for shortening on
