* complex.c (f_signbit): remove condition for signbit because   all platforms have signbit from r26871.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26884 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 09:43:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* complex.c (f_signbit): remove condition for signbit because
+	  all platforms have signbit from r26871.
+
 Fri Mar 12 07:25:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (init_env): get rid of alloca() for outer string.
