--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 13:52:00 2010  Kenta Murata  <mrkn@mrkn.jp>
+
+	* tool/compile_prelude.rb: TMP_RUBY_PREFIX should replace
+	  rubylibprefix but not prefix.
+
 Fri Mar 12 09:43:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* complex.c (f_signbit): remove condition for signbit because
