--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Mar 12 17:14:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/uri/common.rb (URI.encode_www_form): new method to
+	  generate URL-encoded form data. [ruby-dev:39246]
+
+	* lib/uri/common.rb (URI.encode_www_component,
+	  URI.decode_www_component): new method for encode/decode
+	  a name/value of HTML form.
+
 Fri Mar 12 17:36:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/webrick/httpservlet/cgihandler.rb
