--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 13 03:24:15 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: show cosumed time at last.
+
 Sat Mar 13 00:44:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (rb_file_s_basename): check encoding of suffix.
