--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 13 10:03:52 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: fix [Bug #2840] Tk doesn't built in mingw.
+
 Sat Mar 13 03:24:15 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: show cosumed time at last.
