* load.c (rb_get_expanded_load_path): expand paths if any item in $:   is not a string.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26904 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 13 11:14:26 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* load.c (rb_get_expanded_load_path): expand paths if any item in $:
+	  is not a string.
+
 Sat Mar 13 10:16:32 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* load.c (rb_get_expanded_load_path): does not expand paths if all
