--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 13 12:26:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/io.h (MakeOpenFile): finalize fptr get rid of
+	  memory leak.
+
 Sat Mar 13 11:14:26 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* load.c (rb_get_expanded_load_path): expand paths if any item in $:
@@ -14,7 +19,7 @@ Sat Mar 13 10:03:52 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 Sat Mar 13 03:24:15 2010  Tanaka Akira  <akr@fsij.org>
 
-	* tool/transcode-tblgen.rb: show cosumed time at last.
+	* tool/transcode-tblgen.rb: show consumed time at last.
 
 Sat Mar 13 00:44:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
