--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 13 15:44:20 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* io.c (rb_io_print): should not print field separator at the end
+	  of arguments.  [ruby-talk:358633]
+
 Sat Mar 13 14:49:55 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* enum.c (enum_join): remove Enumerable#join. [ruby-core:24786]
