--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Mar 14 02:40:38 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: reject ambiguous mapping.
+
+	* enc/trans/single_byte.trans: remove ambiguous maping such as
+	  \xD6 -> U+05F2 and \xD6\xC7 -> U+FB1F in Windows-1255
+
 Sat Mar 13 23:48:27 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* file.c (file_expand_path): should not just copy the encoding
