--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Mar 14 07:20:17 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* file.c (EXPAND_PATH_BUFFER): make it back to usascii, to prevent
+	  infinite loop on some platform. [ruby-dev:40629]
+
 Sun Mar 14 02:40:38 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: reject ambiguous mapping.
