--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 15:46:09 2010  Tanaka Akira  <akr@fsij.org>
+
+	* enc/trans/emoji.trans: fix nomap_table.
+
 Sun Mar 14 09:50:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (insn_data_to_s_detail), iseq.c (insn_operand_intern):
