--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 22:38:31 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: consider valid_encoding for max_input.
+
 Sun Mar 14 15:46:09 2010  Tanaka Akira  <akr@fsij.org>
 
 	* enc/trans/emoji.trans: fix nomap_table.
