--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 15 01:52:46 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: refactored.
+
 Mon Mar 15 01:18:31 2010  Alexander Zavorine  <alexandre.zavorine@nokia.com>
 
 	* symbian/setup (*.pkg): Ruby Core installation separated from standard extensions.
