--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 15 02:43:59 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb (Action#hash): defined.
+	  (Action#eql?): ditto.
+	  (Action#==): ditto.
+
 Mon Mar 15 01:52:46 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: refactored.
