--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 15 04:18:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/file2lastrev.rb (VCS::{SVN,GIT}#get_revisions):
+	  use block argument 'path' to get the path given by super.
+
 Mon Mar 15 02:43:59 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb (Action#hash): defined.
