--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 15 04:41:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_each_codepoint): read directly when readconv is
+	  needed but internal encoding is not set.  [ruby-core:28650]
+
 Mon Mar 15 04:18:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* tool/file2lastrev.rb (VCS::{SVN,GIT}#get_revisions):
