* file.c (FILE_ALT_SEPARATOR): separated condition.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26927 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 15 07:16:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (FILE_ALT_SEPARATOR): separated condition.
+
 Mon Mar 15 04:41:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (rb_io_each_codepoint): read directly when readconv is
