--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Mon Mar 15 07:16:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Mar 15 07:38:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (realpath_internal): regulate separators in prefix.
+	  [ruby-core:28653]
 
 	* file.c (FILE_ALT_SEPARATOR): separated condition.
 
