* file.c (realpath_rec): use same cache.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26931 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Mon Mar 15 07:38:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Mar 15 07:41:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (realpath_rec): use same cache.
 
 	* file.c (realpath_internal): regulate separators in prefix.
 	  [ruby-core:28653]
