--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 15 09:34:17 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/uri/common.rb (URI.encode_www_component):
+	  call str.to_s at first.
+
 Mon Mar 15 09:36:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* symbian/README.SYMBIAN: fixed broken patch and converted to
