--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 15 11:49:48 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* random.c (rb_reset_random_seed): set seed in this.
+	  [ruby-core:28655]
+
 Mon Mar 15 10:26:02 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/nkf/nkf-utf8/nkf.c: import latest nkf. [master 9306cb0]
