* random.c (next_state): no initialization here.
* random.c (default_mt): always return initialized MT.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26937 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 15 14:06:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* random.c (next_state): no initialization here.
+
+	* random.c (default_mt): always return initialized MT.
+
 Mon Mar 15 11:49:48 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* random.c (rb_reset_random_seed): set seed in this.
