* io.c (rb_io_print): RDoc update.  a patch from Daniel Kelley   in [ruby-core:28643].
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26938 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 15 17:28:30 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* io.c (rb_io_print): RDoc update.  a patch from Daniel Kelley
+	  in [ruby-core:28643].
+
 Mon Mar 15 14:06:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* random.c (next_state): no initialization here.
