--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 15 21:58:03 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: ActionMap#each_firstbyte inlined.
+
 Mon Mar 15 21:22:49 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb (transcode_tblgen): add valid_encoding
