* tool/transcode-tblgen.rb: more info in generating macro names.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26943 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 04:05:13 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: more info in generating macro names.
+
 Mon Mar 15 21:58:03 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: ActionMap#each_firstbyte inlined.
