* tool/transcode-tblgen.rb: refactored to use tree as memo key.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26945 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 07:01:43 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: refactored to use tree as memo key.
+
 Tue Mar 16 04:05:13 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: more info in generating macro names.
