--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 07:16:56 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: redundant loop removed.
+
 Tue Mar 16 07:01:43 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: refactored to use tree as memo key.
