--- a/ChangeLog
+++ b/ChangeLog
@@ -137,7 +137,7 @@ Sun Mar 14 02:40:38 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: reject ambiguous mapping.
 
-	* enc/trans/single_byte.trans: remove ambiguous maping such as
+	* enc/trans/single_byte.trans: remove ambiguous mapping such as
 	  \xD6 -> U+05F2 and \xD6\xC7 -> U+FB1F in Windows-1255
 
 Sat Mar 13 23:48:27 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
@@ -150,7 +150,7 @@ Sat Mar 13 23:48:27 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 Sat Mar 13 17:48:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* tool/file2lastrev.rb: refactord.  fixed changed revision of git.
+	* tool/file2lastrev.rb: refactored.  fixed changed revision of git.
 
 Sat Mar 13 15:44:20 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
@@ -491,7 +491,7 @@ Wed Mar  3 14:28:23 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 Wed Mar  3 06:19:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
-	* win32/win32.c (signbig): defined.
+	* win32/win32.c (signbit): defined.
 
 	* win32/Makefile.sub, symbian/setup (config.h): pack.c requires
 	  SIZEOF_INT*_T now.
