--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 14:06:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/encoding.h (ENC_TO_ENCINDEX): suppress warnings.
+
 Tue Mar 16 14:03:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (RSHIFT): parenthesize the argument of cast instead
