--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 14:47:55 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_getcwd): remvoed duplicated code.
+
 Tue Mar 16 14:06:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/encoding.h (ENC_TO_ENCINDEX): suppress warnings.
