* ext/tmpdir: split from lib/tmpdir.rb.
* win32/win32.c (rb_w32_system_tmpdir): extracted from init_env.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26952 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-Tue Mar 16 14:47:55 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Mar 16 15:20:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/tmpdir: split from lib/tmpdir.rb.
+
+	* win32/win32.c (rb_w32_system_tmpdir): extracted from init_env.
 
 	* win32/win32.c (rb_w32_getcwd): remvoed duplicated code.
 
