* include/ruby/encoding.h (rb_str_conv_enc_opts): missing prototype.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26953 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 17:18:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/encoding.h (rb_str_conv_enc_opts): missing prototype.
+
 Tue Mar 16 15:20:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/tmpdir: split from lib/tmpdir.rb.
