* tool/transcode-tblgen.rb: specialize for singletom mappings.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26956 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 16 22:51:11 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: specialize for singletom mappings.
+
 Tue Mar 16 20:13:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
 	* enc/trans/emoji.trans: added codepoints leading 0xf4 into
