--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 17 01:24:01 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* parse.y (rb_intern3): prohibit Symbol with an invalid encoding.
+	  [ruby-core:24621]
+
+	* test/ruby/test_m17n_comb.rb: modify a test for above.
+
 Tue Mar 16 22:51:11 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: specialize for singletom mappings.
