* ruby.h (rb_warning, rb_sys_warning): fixed typo in rdoc.   [ruby-core:28696]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26960 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 17 06:39:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.h (rb_warning, rb_sys_warning): fixed typo in rdoc.
+	  [ruby-core:28696]
+
 Wed Mar 17 02:29:46 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* compile.c, iseq.c, ruby.c, vm.c, vm_core.h, vm_eval.c: add absolute
