--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 17 16:25:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (rb_hash_aset): allow recursive key.  [ruby-core:24648]
+
 Wed Mar 17 06:39:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.h (rb_warning, rb_sys_warning): fixed typo in rdoc.
