--- a/ChangeLog
+++ b/ChangeLog
@@ -49,7 +49,7 @@ Wed Mar 17 01:24:01 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 Tue Mar 16 22:51:11 2010  Tanaka Akira  <akr@fsij.org>
 
-	* tool/transcode-tblgen.rb: specialize for singletom mappings.
+	* tool/transcode-tblgen.rb: specialize for singleton mappings.
 
 Tue Mar 16 20:13:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
@@ -72,7 +72,7 @@ Tue Mar 16 15:20:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_system_tmpdir): extracted from init_env.
 
-	* win32/win32.c (rb_w32_getcwd): remvoed duplicated code.
+	* win32/win32.c (rb_w32_getcwd): removed duplicated code.
 
 Tue Mar 16 14:06:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
