--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 18 00:58:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* util.c (ruby_strtod): Add support for Hexadecimal
+	  floating-point expression [ruby-dev:40650] #2969
+
 Thu Mar 18 00:00:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/uri/common.rb (URI#{en,de}code_www_form_component):
