--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 02:29:42 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* compile.c (iseq_build_body): add mark to jump table hash of case.
+
 Thu Mar 18 00:58:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* util.c (ruby_strtod): Add support for Hexadecimal
