--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 19:52:27 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: scan singleton mappings sequentially.
+	
 Thu Mar 18 06:28:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (RUBY_EXEC_PREFIX): added to config.h.
