--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 21:24:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (miniruby): link $(NORMALMAINOBJ).
+
 Thu Mar 18 19:52:27 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb: scan singleton mappings sequentially.
