--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 19 05:26:31 2010  Tanaka Akira  <akr@fsij.org>
+
+	* string.c (rb_str_sum): don't call method for each byte.
+
 Thu Mar 18 21:24:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in (miniruby): link $(NORMALMAINOBJ).
