--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 20 11:32:18 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb (each_firstbyte_range): tuned for less
+	  method calls.
+
 Sat Mar 20 00:59:50 2010  wanabe  <s.wanabe@gmail.com>
 
 	* ext/dl/lib/dl/pack.rb (DL#pack): allow LLP64.
