* array.c (rb_ary_uniq_bang): the array is already unique if the   length is zero or one.   (rb_ary_uniq): ditto.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26987 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Mar 20 13:26:09 2010  Tanaka Akira  <akr@fsij.org>
+
+	* array.c (rb_ary_uniq_bang): the array is already unique if the
+	  length is zero or one.
+	  (rb_ary_uniq): ditto.
+
 Sat Mar 20 12:30:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib: fixed typo.  a patch by Sho Hashimoto in [ruby-dev:40716].
