--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Mar 20 19:16:42 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb (ActionMap.unambiguous_action): use
+	  Array#delete.
+	  (ActionMap.merge2): defined.
+	  (ActionMap::PostMemo): removed.
+	  (transcode_compile_tree): use ActionMap.merge2.
+
 Sat Mar 20 13:26:09 2010  Tanaka Akira  <akr@fsij.org>
 
 	* array.c (rb_ary_uniq_bang): the array is already unique if the
