--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 20 22:51:46 2010  Tanaka Akira  <akr@fsij.org>
+
+	* string.c (rb_str_sum): use UCHAR_MAX.
+
 Sat Mar 20 19:16:42 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb (ActionMap.unambiguous_action): use
