--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 21 09:43:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (IO_[CRW]BUF_CAPA_MIN): replaced magic numbers.
+
 Sun Mar 21 09:22:10 2010  Tanaka Akira  <akr@fsij.org>
 
 	* object.c (rb_obj_hash): use LONG2FIX to avoid Bignum allocation.
