--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+Sun Mar 21 12:32:39 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb (transcode_compile_tree): make
+	  valid_encoding mandatory unless from_encoding is registered in
+	  ValidEncoding.
+	  (transcode_tbl_only): ditto.
+	  (transcode_tblgen): ditto.
+	  (ValidEncoding): new function.
+
+	* enc/trans/escape.trans: specify valid_encoding.
+
+	* enc/trans/emoji_sjis_docomo.trans: ditto.
+
+	* enc/trans/emoji.trans: ditto.
+
+	* enc/trans/emoji_iso2022_kddi.trans: ditto.
+
+	* enc/trans/big5.trans: ditto.
+
+	* enc/trans/emoji_sjis_softbank.trans: ditto.
+
+	* enc/trans/emoji_sjis_kddi.trans: ditto.
+
+	* enc/trans/chinese.trans: use ValidEncoding() instead of
+	  ValidEncoding[].
+
 Sun Mar 21 09:43:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (IO_[CRW]BUF_CAPA_MIN): replaced magic numbers.
