--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 21 17:14:49 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb: reuse hash object.
+
 Sun Mar 21 12:32:39 2010  Tanaka Akira  <akr@fsij.org>
 
 	* tool/transcode-tblgen.rb (transcode_compile_tree): make
